# quilt

./: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  memory-bank-migration-plan.md  rustfmt.toml
.ai/: current-work.md
.cursor/rules/: code_review.mdc  collaboration.mdc  implementation_planning.mdc  memory_bank.mdc  modes_of_operation.mdc
.github/workflows/: ai_code_review.yml  openai_code_review.yml  pr_validation.yml
docs/: book.toml  initial-description.md
docs/src/: README.md  SUMMARY.md
docs/src/architecture/: actor-model-architecture.md  overview.md  repository-pattern.md  technologies.md
docs/src/development/: code_review.md  guide.md  testing_and_linting.md  testing_with_mockall.md
docs/src/development/implementation-plans/: README.md  future.md  initial-implementation-plan.md  persistence.md  resilience.md  search.md  swatching-embedding.md
docs/src/development/implementation-plans/complete/: core-actors.md  discovery.md  foundation.md  text-processing.md
docs/src/features/: actor-model-architecture.md  actor-model-prototype.md  implementation-plan.md  material.md  message-channel-system.md  spread.md  swatch-book.md  swatch.md
docs/src/features/cutting/: README.md  cutting-architecture.md  cutting-behaviors.md  cutting-errors.md
docs/src/features/discovery/: discovery.md  material.md
docs/src/features/materials/: IMPLEMENTATION_PLAN.md  directory-scanner.md  material-architecture.md  material-registry.md  material.md
docs/src/features/memory-building/: memory-building.md
docs/src/features/swatching/: README.md  swatching-architecture.md  swatching-behaviors.md  swatching-errors.md
docs/src/product/: overview.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: db.rs  events.rs  lib.rs  main.rs  orchestrator.rs  types.rs
src/actors/: mod.rs
src/cutting/: actor.rs  cut.rs  mod.rs  repository.rs  sqlite_repository.rs
src/cutting/cutter/: config.rs  mod.rs  text.rs
src/cutting/tests/: cutting_actor_test.rs  mod.rs
src/discovery/: actor.rs  mod.rs  scanner.rs
src/discovery/tests/: mod.rs  scanner_test.rs
src/events/: bus.rs  mod.rs  types.rs
src/events/tests/: mod.rs
src/materials/: channels.rs  cut.rs  messages.rs  mod.rs  registry.rs  repository.rs  scanner.rs  sqlite_repository.rs  types.rs
src/materials/tests/: channel_integration_test.rs  mod.rs  scanner_test.rs
src/swatching/: actor.rs  embedding.rs  hf_embedding.rs  mod.rs  repository.rs  sqlite_repository.rs  swatch.rs
