[package]
name = "quilt"
version = "0.1.0"
edition = "2021"
authors = ["Monday Romelfanger"]
description = "A local-first, modular memory and context engine"

[[bin]]
name = "quilt"
path = "src/main.rs"

[dependencies]
# Core dependencies
cuid2 = "0.1.2"
time = { version = "0.3", features = ["serde", "macros"] }
walkdir = "2.4.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
# Actor system
actix = "0.13.1"
# Command-line argument parsing
clap = { version = "4.4.18", features = ["derive"] }
# Logging
log = "0.4.20"
env_logger = "0.11.8"
# Structured logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"  # For creating temporary test directories
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
futures = "0.3"      # For noop_waker_ref and other testing utilities

# We'll add more dependencies as we implement features 