[package]
name = "quilt"
version = "0.1.0"
edition = "2021"
authors = ["Monday Romelfanger"]
description = "A local-first, modular memory and context engine"

[[bin]]
name = "quilt"
path = "src/main.rs"

[dependencies]
# Core dependencies
cuid2 = "0.1.4"
time = { version = "0.3.41", features = ["serde", "macros"] }
walkdir = "2.5.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "fs"] }
# Actor system
actix = "0.13.5"
# Command-line argument parsing
clap = { version = "4.5.36", features = ["derive"] }
# Logging
log = "0.4.27"
env_logger = "0.11.8"
# Structured logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
text-splitter = "0.25.1"
# Async trait for repository traits
async-trait = "0.1.88"
# SQLite database
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "time"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.19.1"
futures = "0.3.31"

# We'll add more dependencies as we implement features 