[package]
name = "quilt"
version = "0.1.0"
edition = "2021"
authors = ["Monday Romelfanger"]
description = "A local-first, modular memory and context engine"

[[bin]]
name = "quilt"
path = "src/main.rs"

[dependencies]
# Core dependencies
cuid2 = "0.1.4"
time = { version = "0.3.41", features = ["serde", "macros"] }
walkdir = "2.5.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "fs"] }
# Actor system
actix = "0.13.5"
# Command-line argument parsing
clap = { version = "4.5.36", features = ["derive"] }
# Logging
log = "0.4.27"
env_logger = "0.11.8"
# Structured logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
text-splitter = "0.25.1"
# Async trait for repository traits
async-trait = "0.1.88"
# SQLite database
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "time"] }
# Need rusqlite explicitly for FFI access with the 'bundled' feature for auto_extension
# Version 0.30.0 uses libsqlite3-sys ^0.27, compatible with sqlx's ^0.27 requirement
rusqlite = { version = "0.30.0", features = ["bundled"] }
# SQLite vector extension for similarity search
sqlite-vec = "0.1.6"
# Efficiently pass vector bytes
zerocopy = "0.7" # Adjust version if needed
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# Embedding model
fastembed = "4.8.0"

[dev-dependencies]
tempfile = "3.19.1"
futures = "0.3.31"
mockall = "0.12"
